<resources>
    <string name="app_name">InterPharmaUK</string>
    <string name="title_home">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Balance</string>
    <string name="product_name">Product</string>
    <string name="ar_product_name">اسم المستحضر</string>
    <string name="component_name">Material</string>
    <string name="ar_component_name">اسم الخامة</string>
    <string name="amount">Amount</string>
    <string name="ar_amount">الكمية</string>
    <string name="batch_number">Batch Number</string>
    <string name="ar_batch_number">لاقم التشغيلة</string>
    <string name="save">Save</string>
    <string name="ar_save">حفظ</string>
    <string name="cancel">Cancel</string>
    <string name="ar_cancel">الغاء</string>
    <string name="warning_message">Warning : You Will Not Be Able To Edit Batch Number, Materials Will Be Consumed.</string>
    <string name="delete_warning_message">Warning : Item Will Be Permanently Deleted.</string>
    <string name="operate">Operate</string>
    <string name="ar_operate">تشغيل</string>
    <string name="available_batches">Available Batches</string>
    <string name="ar_available_batches">التشغيلات المتاحة</string>
    <string name="batches">Batches</string>
    <string name="material">Material</string>
    <string name="then">Then</string>
    <string name="available_amount">Available</string>
    <string name="ar_available_amount">الكمية المتاحة</string>
    <string name="ar_provider_name">اسم المورد</string>
    <string name="provider_name">Provider</string>
    <string name="date">2021_3_15</string>
    <string name="example_batch">102933_46673_15</string>
    <string name="delete">Delete</string>
    <string name="_continue">Continue</string>
    <string name="date_title">Date</string>
</resources>