<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/view_production_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/noto_sans_arabic_semi_bold"
            android:text="@string/product_name"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:text="@string/material" />

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:text="@string/amount" />

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:text="@string/batches" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_78sdp"
            android:layout_marginEnd="@dimen/_16sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_production_RecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/batch_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>