<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/production_dialog_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/product_name"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patch_number_ET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_58sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_58sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/batch_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="32"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patch_date_ET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_58sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_title"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:maxLength="32"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_185sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:layout_height="match_parent"
                android:text="@string/material"
                android:textColor="@color/primary" />

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:layout_height="match_parent"
                android:text="@string/available_amount"
                android:textColor="@color/primary" />

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:layout_height="match_parent"
                android:text="@string/then"
                android:textColor="@color/primary" />

            <TextView
                style="@style/DetailsDialogTextStyle"
                android:layout_height="match_parent"
                android:text="@string/batches"
                android:textColor="@color/primary" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearlayout"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_195sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/consumption_RecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/consumption_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_78sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_95sdp"
            android:background="@drawable/edit_round_8"
            android:backgroundTint="@color/red500"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/warning_message"
            android:textColor="@color/red700"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_3sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_80sdp"
            android:background="#A4CACAE1" />

        <Button
            android:id="@+id/add_production_BT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_2"
            android:text="@string/operate"
            android:textColor="@color/weird_green"
            app:backgroundTint="@color/white" />

        <View
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_3" />

        <Button
            android:id="@+id/cancel_production_BT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_2"
            android:text="@string/cancel"
            android:textColor="@color/coral"
            app:backgroundTint="@color/white" />

        <View
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_4" />

    </RelativeLayout>
</layout>