<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_85sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_component_name"
                    style="@style/DetailsDialogTextStyle"
                    android:layout_height="match_parent"
                    android:text="@string/material"
                    android:textColor="@color/un_active_primary" />

                <TextView
                    android:id="@+id/details_component_amount"
                    style="@style/DetailsDialogTextStyle"
                    android:layout_height="match_parent"
                    android:text="@string/amount"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/details_component_available_amount"
                    style="@style/DetailsDialogTextStyle"
                    android:layout_height="match_parent"
                    android:text="@string/available_amount"
                    android:textColor="@color/weird_green" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_87sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:background="#A4CACAE1" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>