<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:background="@color/red500"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/delete_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/noto_sans_arabic_semi_bold"
            android:text="@string/product_name"
            android:textColor="@color/red700"
            android:textSize="32sp" />

        <TextView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_95sdp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/delete_warning_message"
            android:textColor="@color/red700"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_3sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_80sdp"
            android:background="#A4CACAE1" />

        <Button
            android:id="@+id/cancel_delete_BT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_2"
            android:text="@string/cancel"
            android:textColor="@color/weird_green"
            app:backgroundTint="@color/red500" />

        <View
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_3" />

        <Button
            android:id="@+id/delete_item_BT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_2"
            android:text="@string/delete"
            android:textColor="@color/coral"
            app:backgroundTint="@color/red500" />

        <View
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/edit_round_4" />

    </RelativeLayout>
</layout>